2006-06-21  Roman Kennke  <kennke@aicas.com>

	* javax/swing/AbstractButton.java
	(init): Call setText() instead of setting the property directly,
	so that listeners (especially in the UI) get notified.

2006-06-21  Roman Kennke  <kennke@aicas.com>

	* javax/swing/UIManager.java
	(MultiplexUIDefaults): New inner class.
	(currentUIDefaults): Changed type to be MultiplexUIDefaults.
	(userUIDefaults): Changed name to be lookAndFeelDefaults.
	(<cinit>): Call setLookAndFeel(String) instead of trying to load
	directly. Print stacktrace if something goes wrong.
	(get): Delegate call to currentUIDefaults.
	(getDefaults): If currentUIDefaults is null, then lazily instantiate
	it.
	(getUI): Delegate call to currentUIDefaults.
	(put): Delegate call to currentUIDefaults.
	(setLookAndFeel): Initialize currentUIDefaults with
	MultiplexUIDefaults. Set lookAndFeelDefaults.
	(setLookAndFeel): Use current thread's context classloader for
	loading the L&F.

2006-06-21  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/GapContent.java
	(GapContentPosition.GapContentPosition): Replace
	Collections.binarySearch with call to local search() to make
	sure we find the first object that equals the searched object.
	(setPositionsInRange): Likewise.
	(adjustPositionsInRange): Likewise.
	(search): New helper method.

2006-06-21  Gary Benson  <gbenson@redhat.com>

	* gnu/java/awt/peer/gtk/CairoGraphics2D.java: Add security check.
	* gnu/java/awt/peer/qt/QtGraphics.java: Likewise.
	* gnu/java/awt/java2d/AbstractGraphics2D.java: Likewise.

2006-06-20  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* native/plugin/Makefile.am (libgcjwebplugin_la_CXXFLAGS): Define
	APPLETVIEWER_EXECUTABLE to gappletviewer.

2006-06-20  Tom Tromey  <tromey@redhat.com>

	PR classpath/28095:
	* java/net/URL.java (URL): Throw MalformedURLException if a
	RuntimeException is caught.  Chain exceptions.

2006-06-20  Lillian Angel  <langel@redhat.com>

	* gnu/java/awt/peer/gtk/GtkCheckboxPeer.java